--- a/css/common_pc.css
+++ b/css/common_pc.css
@@ -39,7 +39,35 @@
     layout
 ****************************************************************************/
 /* Frame */
-html,body {width:100%; height:100%;}
-#wrap {overflow:hidden;visibility:hidden;color:#000013;font-size:16px;line-height:1.5;opacity:0}
-.inner {position:relative;margin:0auto;height:100%;}
+html,body {width:100%;height:100%}
+#wrap {overflow:hidden;visibility:hidden;position:relative;width:100%;color:#000013;font-size:16px;line-height:1.5;opacity:0}
+#header {position:relative;z-index:30}
+#container {position:relative;z-index:20}
+#footer {z-index:10}
+.inner {position:relative;margin:0 auto;height:100%;}
+
+/* FHD - contents size : 1800px */
+[data-grid-width="1920"] {min-width: 1903px;}
+[data-grid-width="1920"][data-scrollbar-width="0"] {min-width: 1920px;}
+[data-grid-width="1920"] .inner {padding: 0 60px; width: 1920px;}
+[data-grid-width="1920"][data-oversize=false] .inner {padding: 0 51px 0 52px; width: 1903px;}
+[data-grid-width="1920"][data-scrollbar-width="0"] .inner {padding: 0 60px; width: 1920px;}
+/* HD+ - contents size : 1500px */
+[data-grid-width="1600"] {min-width: 1583px;}
+[data-grid-width="1600"][data-scrollbar-width="0"] {min-width: 1600px;}
+[data-grid-width="1600"] .inner {padding: 0 50px; width: 1600px;}
+[data-grid-width="1600"][data-oversize=false] .inner {padding: 0 42px 0 41px; width: 1583px;}
+[data-grid-width="1600"][data-scrollbar-width="0"] .inner {padding: 0 50px; width: 1600px;}
+/* HD - contents size : 1200px */
+[data-grid-width="1280"] {min-width: 1263px;}
+[data-grid-width="1280"][data-scrollbar-width="0"] {min-width: 1280px;}
+[data-grid-width="1280"] .inner {padding: 0 40px; width: 1280px;}
+[data-grid-width="1280"][data-oversize=false] .inner {padding: 0 31px 0 32px; width: 1263px;}
+[data-grid-width="1280"][data-scrollbar-width="0"] .inner {padding: 0 40px; width: 1280px;}
+/* WSVGA - contents size : 1000px */
+[data-grid-width="1024"] {min-width: 1007px;}
+[data-grid-width="1024"][data-scrollbar-width="0"] {min-width: 1024px;}
+[data-grid-width="1024"] .inner {padding: 0 12px; width: 1024px;}
+[data-grid-width="1024"][data-oversize=false] .inner {padding: 0 3px 0 4px; width: 1007px;}
+[data-grid-width="1024"][data-scrollbar-width="0"] .inner {padding: 0 12px; width: 1024px;}
 
