--- a/css/common_pc.css
+++ b/css/common_pc.css
@@ -40,7 +40,7 @@
 ****************************************************************************/
 /* Frame */
 html,body {width:100%;height:100%}
-#wrap {overflow:hidden;visibility:hidden;position:relative;width:100%;color:#000013;font-size:16px;line-height:1.5;opacity:0}
+#wrap {position:relative;width:100%;color:#000013;font-size:16px;line-height:1.5}
 #header {position:relative;z-index:30}
 #container {position:relative;z-index:20}
 #footer {z-index:10}
