--- a/css/common_pc.css
+++ b/css/common_pc.css
@@ -43,7 +43,7 @@ html,body {width:100%;height:100%}
 #wrap {position:relative;width:100%;color:#000013;font-size:16px;line-height:1.5}
 #header {position:relative;z-index:30}
 #container {position:relative;z-index:20}
-#footer {z-index:10}
+#footer {position:relative;z-index:10}
 .inner {position:relative;margin:0 auto;height:100%;}
 
 /* FHD - contents size : 1800px */
