--- a/css/common_pc.css
+++ b/css/common_pc.css
@@ -6,22 +6,29 @@
 /****************************************************************************
     common                                  https://getbootstrap.com 참고함
 ****************************************************************************/
-.overlay {overflow: hidden;}
+/* overflow */ 
+.overflow-auto {overflow:auto !important}
+.overflow-hidden {overflow:hidden !important}
+.overflow-visible {overflow:visible !important}
+.overflow-scroll {overflow:scroll !important}
 
 /* display */
-.d-flex  {display:flex}
-.d-block  {display:block}
+.d-flex  {display:flex !important}
+.d-block  {display:block !important}
 
 /* flex */
-.flex-column {flex-direction:column}
-.justify-content-between {justify-content:space-between}
-.justify-content-center {justify-content:center}
-.align-items-center {align-items:center}
+.flex-column {flex-direction:column !important}
+.justify-content-between {justify-content:space-between !important}
+.justify-content-center {justify-content:center !important}
+.align-items-center {align-items:center !important}
 
 /* float */
-.float-start {float:left}
-.float-end {float:right}
-.float-none {float:none}
+.float-start {float:left !important}
+.float-end {float:right !important}
+.float-none {float:none !important}
+.clear-start {clear:left !important}
+.clear-end {clear:right !important}
+.clear-both {clear:both !important}
 
 /* position */
 .position-relative {position:relative}
