--- a/scss/common_mo.scss
+++ b/scss/common_mo.scss
@@ -4,7 +4,7 @@
 
 
 /****************************************************************************
-    common                                  https://getbootstrap.com 참고함
+    utilities Class                        https://getbootstrap.com 참고함
 ****************************************************************************/
 /* overflow */ 
 .overflow-auto {overflow:auto !important}
