--- a/css/common_pc.css
+++ b/css/common_pc.css
@@ -4048,6 +4048,10 @@
   pointer-events: none !important;
 }
 
+.pointer-all {
+  pointer-events: all !important;
+}
+
 /****************************************************************************
     layout
 ****************************************************************************/
