--- a/scss/common_pc.scss
+++ b/scss/common_pc.scss
@@ -124,6 +124,7 @@
 
 /* cursor & pointer-event */
 .pointer-none {pointer-events:none !important} 
+.pointer-all {pointer-events:all !important} 
 
 
 
