--- a/scss/common_mo.scss
+++ b/scss/common_mo.scss
@@ -137,3 +137,4 @@ html,body {width:100%;height:100%}
 #container {position:relative;z-index:20}
 #footer {position:relative;z-index:10}
 .inner {position:relative;margin:0 auto;padding:0 4.4444vw;height:100%;}
+.inner:after {content:'';display:block;visibility:hidden;height:0;font-size:0;clear:both}
