--- a/scss/common_pc.scss
+++ b/scss/common_pc.scss
@@ -138,6 +138,7 @@ html,body {width:100%;height:100%}
 #container {position:relative;z-index:20}
 #footer {position:relative;z-index:10}
 .inner {position:relative;margin:0 auto;height:100%;}
+.inner:after {content:'';display:block;visibility:hidden;height:0;font-size:0;clear:both}
 
 /* FHD - contents size : 1800px */
 [data-grid-width="1920"] {min-width: 1903px;}
