--- a/scss/common_pc.scss
+++ b/scss/common_pc.scss
@@ -63,7 +63,7 @@
     }
 }
 
-/* Font size */ 
+/* Font size */
 .fs {
     @for $i from 0 through 50 {
         &#{"-"+$i} {
@@ -72,7 +72,7 @@
     }
 }
 
-/* Font weight and italics */ 
+/* Font weight and italics */
 .fw-bold {font-weight:bold !important;}
 .fw-bolder {font-weight:bolder !important;}
 .fw-normal {font-weight:400 !important;}
@@ -97,7 +97,7 @@
     }
 }
 
-/* Font weight and italics */ 
+/* Font weight and italics */
 .fw-bold {font-weight:bold !important;}
 .fw-bolder {font-weight:bolder !important;}
 .fw-normal {font-weight:400 !important;}
@@ -115,7 +115,7 @@
     }
 }
 
-/* Word break */ 
+/* Word break */
 .word-break {word-wrap:break-word}
 .word-keep {word-break:keep-all}
 
@@ -123,8 +123,8 @@
 .img-fluid {max-width:100%;height:auto;vertical-align:middle}
 
 /* cursor & pointer-event */
-.pointer-none {pointer-events:none !important} 
-.pointer-all {pointer-events:all !important} 
+.pointer-none {pointer-events:none !important}
+.pointer-all {pointer-events:all !important}
 
 
 
@@ -164,3 +164,25 @@ html,body {width:100%;height:100%}
 [data-grid-width="1024"] .inner {padding: 0 12px; width: 1024px;}
 [data-grid-width="1024"][data-oversize=false] .inner {padding: 0 3px 0 4px; width: 1007px;}
 [data-grid-width="1024"][data-scrollbar-width="0"] .inner {padding: 0 12px; width: 1024px;}
+
+
+
+/****************************************************************************
+    contents
+****************************************************************************/
+/* tab */
+.tab-container {
+    position:relative;
+    .tab-wrapper {
+        overflow:hidden;display:flex;position:relative;z-index:1;
+    }
+    .tab-slide {
+        overflow:hidden;flex-shrink:0;position:relative;width:100%;
+    }
+}
+
+.tab-container.tab-autoheight {
+    .tab-wrapper {
+        align-items:flex-start;transition:height 0.6s cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+}
