--- a/scss/common_mo.scss
+++ b/scss/common_mo.scss
@@ -124,6 +124,7 @@
 
 /* cursor & pointer-event */
 .pointer-none {pointer-events:none !important}
+.pointer-all {pointer-events:all !important}
 
 
 
@@ -132,9 +133,31 @@
 ****************************************************************************/
 /* Frame */
 html,body {width:100%;height:100%}
-#wrap {position:relative;width:100%;color:#000013;font-size:3.6vw;line-height:1.5}
+#wrap {position:relative;width:100%;color:#000013;/* font-size:3.6vw;line-height:1.5 */}
 #header {position:relative;z-index:30}
 #container {position:relative;z-index:20}
 #footer {position:relative;z-index:10}
 .inner {position:relative;margin:0 auto;padding:0 4.4444vw;height:100%;}
 .inner:after {content:'';display:block;visibility:hidden;height:0;font-size:0;clear:both}
+
+
+
+/****************************************************************************
+    contents
+****************************************************************************/
+/* tab */
+.tab-container {
+    position:relative;
+    .tab-wrapper {
+        overflow:hidden;display:flex;position:relative;z-index:1;
+    }
+    .tab-slide {
+        overflow:hidden;flex-shrink:0;position:relative;width:100%;
+    }
+}
+
+.tab-container.tab-autoheight {
+    .tab-wrapper {
+        align-items:flex-start;transition:height 0.6s cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+}
