--- a/etc/css/layer.css
+++ b/etc/css/layer.css
@@ -140,7 +140,7 @@ fieldset {min-width:0;max-width:100%;}
 
 [data-target-device=pc] ~ #alert_wrap {top: 50%; left: 50%;}
 [data-target-device=pc] ~ #alert_wrap .layer {width: 380px;}
-[data-target-device=pc] ~ #alert_wrap #alert .textArea {padding: 20px;}
+[data-target-device=pc] ~ #alert_wrap #alert .textArea {padding:20px;font-size:16px}
 [data-target-device=pc] ~ #alert_wrap #alert button {font-size: 18px; line-height: 48px; border-top-width: 1px;}
 
 
