--- a/etc/css/layer.css
+++ b/etc/css/layer.css
@@ -90,7 +90,7 @@ fieldset {min-width:0;max-width:100%;}
 
 
 
-#loading_wrap {font-family: NotoSansKR;}
+#loading_wrap {font-family:NotoSansKR}
 #loading_wrap .close {display: none;}
 #loading {position: fixed; z-index: 101; top: 0; left: 0; width: 100%; height: 100%; color: #fff; font-size: 3vw; text-align: center;}
 #loading .content {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}
