--- a/scss/common_mo.scss
+++ b/scss/common_mo.scss
@@ -134,6 +134,7 @@
 /* Frame */
 html,body {width:100%;height:100%}
 #wrap {position:relative;width:100%;color:#000013;/* font-size:3.6vw;line-height:1.5 */}
+// #wrap[data-scroll-rock="true"] {touch-action:none}
 #header {position:relative;z-index:30}
 #container {position:relative;z-index:20}
 #footer {position:relative;z-index:10}
