SERVER.images 추가, LoadingWrap 수정, SCSS import

--- a/scss/common_pc.scss
+++ b/scss/common_pc.scss
@@ -1,6 +1,7 @@
 /* SCSS Document */
 @charset "UTF-8";
-
+@import "variables.scss";
+@import "mixins.scss";
 
 
 /****************************************************************************
