--- a/etc/css/layer.css
+++ b/etc/css/layer.css
@@ -92,10 +92,10 @@ fieldset {min-width:0;max-width:100%;}
 
 #loading_wrap {font-family:NotoSansKR}
 #loading_wrap .close {display: none;}
-#loading {position: fixed; z-index: 101; top: 0; left: 0; width: 100%; height: 100%; color: #fff; font-size: 3vw; text-align: center;}
-#loading .content {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);}
-#loading .content .img {position: relative; margin: auto; width: 20vw; height: 20vw; transform: rotate(0); animation: loading 2.4s infinite linear;}
-#loading .content .img i {position: absolute; top: 0; left: 50%; width: 3vw; height: 50%; margin-left: -1.5vw; transform-origin: 50% 100%;}
+#loading {position:fixed;z-index:101;top:0;left:0;width:100%;height:100%;color:#fff;font-size:3vw;text-align:center;}
+#loading .content {position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);border:1px solid red;}
+#loading .content .img {position:relative;margin:auto;width:20vw;height:20vw;transform:rotate(0);animation:loading 2.4s infinite linear;}
+#loading .content .img i {position:absolute;top:0;left:50%;width:50%;height:50%;margin-left:-25%;transform-origin:50% 100%;}
 #loading .content .img i:nth-child(1) {transform: rotate(45deg);}
 #loading .content .img i:nth-child(2) {transform: rotate(90deg);}
 #loading .content .img i:nth-child(3) {transform: rotate(135deg);}
@@ -104,15 +104,12 @@ fieldset {min-width:0;max-width:100%;}
 #loading .content .img i:nth-child(6) {transform: rotate(270deg);}
 #loading .content .img i:nth-child(7) {transform: rotate(315deg);}
 #loading .content .img i:nth-child(8) {transform: rotate(360deg);}
-#loading .content .img i::after {content: ""; display: block; width: 3vw; height: 3vw; background-color: #fff; border-radius: 50%; transform: scale(0.6);}
-#loading .content p {margin-top: 3vw; white-space: nowrap;}
-#loading .content p b {color: #f00;}
+#loading .content .img i::after {content:"";display:block;width:35%;height:35%;background-color:#fff;border-radius:50%;transform:scale(0.6)}
+#loading .content p {position:absolute;left:50%;font-size:16px;white-space:nowrap;transform:translate(-50%, 80%)}
 
-[data-target-device=pc] ~ #loading_wrap #loading{color: #fff; font-size: 18px;}
-[data-target-device=pc] ~ #loading_wrap .content .img {width: 150px; height: 150px;}
-[data-target-device=pc] ~ #loading_wrap .content .img i {width: 20px; margin-left: -10px; }
-[data-target-device=pc] ~ #loading_wrap .content .img i::after {width: 20px; height: 20px;}
-[data-target-device=pc] ~ #loading_wrap .content p {margin-top: 15px;}
+@media screen and (min-width:768px) {
+    #loading .content .img {width:100px;height:100px;}    
+}
 
 @keyframes loading {
     0% {transform: rotate(0);}
