--- a/etc/css/layer.css
+++ b/etc/css/layer.css
@@ -10,18 +10,15 @@ fieldset {min-width:0;max-width:100%;}
 .layer_wrap *,
 .layer_wrap::before,
 .layer_wrap::after {margin:0;padding:0;border:0 solid transparent;outline:0 solid transparent;box-shadow:0 0 0 transparent;font-family:inherit;text-shadow:0 0 0 transparent;box-sizing:border-box;background:transparent none center center no-repeat;}
-
 .layer_wrap .layer {position:absolute;z-index:101;top:50%;left:50%;transform:translate(-50%, -50%);}
 .layer_wrap section {margin:0;padding:0;max-width:100%;}
-
 .layer_wrap .modal {position:static;display:block;width:100%;height:100%;}
-
 .layer_wrap>.close {position:absolute;z-index:101;top:5vw;right:5vw;width:1em;height:1em;font-size:10vw;cursor:pointer;fill:#fff}
 .layer_wrap>.close .ico {}
 
 [data-target-device=pc] ~ .layer_wrap {top:50%;left:50%;right:auto;width:100%;height:100%;transform:translate(-50%, -50%);}
 [data-target-device=mo] ~ .layer_wrap {width:100%;height:100%;transform:translate(0, 0);}
-[data-target-device=mo] ~ .layer_wrap .layer {min-width:80%;}
+/* [data-target-device=mo] ~ .layer_wrap .layer {min-width:80%;} */
 [data-target-device=pc] ~ .layer_wrap>.close {position:absolute;top:50%;right:50%;width:1em;height:1em;margin:-430px -290px 0 0;font-size:50px;background-color:transparent}
 
 
@@ -31,28 +28,24 @@ fieldset {min-width:0;max-width:100%;}
 */
 
 
+
 /* 사이트 준비중 */
-#developing_wrap {}
+#developing_wrap {font-size:1.6rem}
 #developing_wrap>.close {display:none}
 #developing_wrap .layer {}
-#developing {width:100%;height:100%;color:#fff;font-size:3vw;text-align:center;}
-#developing .content {overflow:hidden;border-radius:2vw;background-color:#fff;box-shadow:0 0 3vw rgba(0,0,0,0.5);}
-#developing .content .txt {padding:5vw 3vw;color:#333;font-size:4vw;word-break:keep-all;letter-spacing:-0.04em}
-#developing .content .txt p {line-height:1.6;}
-#developing .content .list_sns {margin-bottom:5vw}
-#developing .content .link_sns {overflow:hidden;display:inline-block;width:1em;height:1em;margin:0 0.1em;border-radius:100%;font-size:9vw;line-height:1em}
-#developing .content button {padding:4vw;width:100%;color:#00ac4a;font-size:4.5vw;font-weight:700;border-top:0.3vw solid #ddd;cursor:pointer;transition:all 0.2s ease-in-out;}
+#developing {width:100%;height:100%;color:#fff;text-align:center;}
+#developing .content {overflow:hidden;border-radius:1rem;background-color:#fff;box-shadow:0 0 3vw rgba(0,0,0,0.5);}
+#developing .content .txt {padding:1.7em 1.7em 0 1.7em;color:#333;font-size:1em;word-break:keep-all;letter-spacing:-0.04em}
+#developing .content .txt p {line-height:1.6;white-space:nowrap;}
+#developing .content .list_sns {padding:1.5em 0}
+#developing .content .link_sns {overflow:hidden;display:inline-block;width:1em;height:1em;margin:0 0.1em;border-radius:100%;font-size:2.2em;line-height:1em;white-space:nowrap}
+#developing .content .link_sns:hover {animation:developingLinkSns 0.4s forwards ease-in-out}
+#developing .content button {padding:1em 0;width:100%;color:#00ac4a;font-weight:700;border-top:1px solid #ddd;cursor:pointer;transition:all 0.2s ease-in-out;}
 #developing .content button:hover {background-color:rgb(241, 241, 241);}
 
-[data-target-device=mo] ~ #developing_wrap .layer {width:80%;}
-[data-target-device=pc] ~ #developing_wrap {top:50%;left:50%;transform:translate(-50%,-50%);}
-[data-target-device=pc] ~ #developing_wrap #developing {top:0;left:0;width:400px;height:100%;font-size:16px}
-[data-target-device=pc] ~ #developing_wrap #developing .content {top:50%;left:50%;width:100%;border-radius:20px;box-shadow:0 0 10px rgba(0,0,0,0.5);}
-[data-target-device=pc] ~ #developing_wrap #developing .content .txt {padding:30px 10px 20px;font-size:18px;}
-[data-target-device=pc] ~ #developing_wrap #developing .content .list_sns {margin-bottom:30px}
-[data-target-device=pc] ~ #developing_wrap #developing .content .link_sns {margin:0 0.05em;font-size:40px}
-[data-target-device=pc] ~ #developing_wrap #developing .content .link_sns:hover {animation:developingLinkSns 0.4s forwards ease-in-out}
-[data-target-device=pc] ~ #developing_wrap #developing .content button {padding:20px;width:100%;font-size:20px;border-top:1px solid #ddd}
+@media screen and (min-width:768px) {
+    #developing_wrap {font-size:1rem}
+}
 
 @keyframes developingLinkSns {
     0%              {transform:translateY(2%)}
@@ -90,6 +83,7 @@ fieldset {min-width:0;max-width:100%;}
 
 
 
+/* 잠시만기다려주세요 */
 #loading_wrap {font-family:NotoSansKR}
 #loading_wrap .close {display: none;}
 #loading {position:fixed;z-index:101;top:0;left:0;width:100%;height:100%;color:#fff;font-size:3vw;text-align:center;}
@@ -108,7 +102,7 @@ fieldset {min-width:0;max-width:100%;}
 #loading .content p {position:absolute;left:50%;font-size:16px;white-space:nowrap;transform:translate(-50%, 80%)}
 
 @media screen and (min-width:768px) {
-    #loading .content .img {width:100px;height:100px;}    
+    #loading .content .img {width:100px;height:100px;}
 }
 
 @keyframes loading {
